learnflow-app/k8s/ingress-simple-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learnflow-ingress-simple
  namespace: learnflow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: learnflow-frontend
      port:
        number: 3000
  rules:
  - host: learnflow.174.138.122.121.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: learnflow-frontend
            port:
              number: 3000
  tls:
  - hosts:
    - learnflow.174.138.122.121.nip.io
    secretName: learnflow-tls-secret
